make my profile prettier

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="container">
       <div class="card-white" id="introduction">
-    <h1>Hello! My name is Jufri </h1>
-    <h1>Welcome to my profile page </h1>
+    <h1>Hello there!</h1>
+    <h2>My name is Jufri</h2>
+    <h1>Welcome to my profile page!</h1>
     <h2>(͡• ͜ʖ ͡•)</h2>
       <img src="images/Profilepix.jpg" class="img-circle" width="150px" alt="Jufri's Pix">
         <p>
@@ -20,6 +21,7 @@
         <p>I enjoy cycling, reading and having a cup of <em>hot coffee!</em></p>
       <a href="https://www.lewagon.com" target="_blank">
         This is where i learn my coding!</a>
+    <h5><em>Stay tuned for my latest update!</em></h5>
       </div>
     <div class="card-white">
       <h3>Follow me!</h3>
